Output a summary at the end of the extract command